# TFAT

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  sonar-project.properties
CMake/: CompileOptions.cmake
Includes/TFAT/: TFAT.hpp
Includes/TFAT/Champion/: Champion.hpp  ChampionSkill.hpp  ChampionSkillTag.hpp  ChampionStat.hpp
Includes/TFAT/Enum/: ChampionEnums.hpp  ChampionOriginEnum.def  ChampionSkillTypeEnum.def  ChampionStatTagEnum.def  ChampionTypeEnum.def
Includes/TFAT/Game/: Game.hpp  GameTimer-Impl.hpp  GameTimer.hpp
Includes/TFAT/Model/: Player.hpp
Includes/TFAT/Piece/: Piece.hpp
Includes/TFAT/Utils/: ChampionParser.hpp  JsonParser.hpp  Macros.hpp
Libraries/json/single_include/nlohmann/: json.hpp
Resources/: champions.json  items.json  traits.json
Scripts/: Dockerfile.bionic-codecov  Dockerfile.disco  Dockerfile.disco.clang-latest  Dockerfile.disco.gcc-latest  Dockerfile.focal  azure_pipelines_build_linux.yml  azure_pipelines_build_windows_vs2017.yml  azure_pipelines_build_windows_vs2019.yml  header_gen.py  travis_build_docker.sh  utils.py
Sources/TFAT/: CMakeLists.txt
Sources/TFAT/Champion/: Champion.cpp
Sources/TFAT/Game/: Game.cpp
Sources/TFAT/Model/: Player.cpp
Sources/TFAT/Piece/: Piece.cpp
Sources/TFAT/Utils/: ChampionParser.cpp  JsonParser.cpp
Tests/UnitTests/: CMakeLists.txt  ChampionParserTest.cpp  GameTimerTest.cpp  UnitTests.cpp  pch.h
